[package]
name = "percolator-prog"
version = "0.1.0"
edition = "2021"
publish = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_arch, values("sbf", "bpf"))', 'cfg(kani)', 'cfg(target_os, values("solana"))', 'cfg(feature, values("custom-heap", "custom-panic"))'] }

[lib]
crate-type = ["cdylib", "lib"]
name = "percolator_prog"
path = "src/percolator.rs"

[features]
no-entrypoint = []
test = []      # Enables local test-only CPI/oracle bypasses. Never combine with mainnet.
test-sbf = ["test"]
kani = []
cu-audit = []  # Enable compute unit checkpoints for CU auditing
small = ["percolator/small"]    # MAX_ACCOUNTS=256 (~0.68 SOL)
medium = ["percolator/medium"]  # MAX_ACCOUNTS=1024 (~2.7 SOL)
mainnet = []                    # Mainnet build — enables compile-time guards
# Wave 12-D: opt-in Anchor v2 / Pinocchio entrypoint (port of upstream eefe834).
# Mutually exclusive with the legacy entrypoint via cfg gates in src/percolator.rs.
# Mainnet binary should ship WITHOUT this feature (default = legacy entrypoint)
# until a coordinated cutover with SDK + keeper consumers.
anchor-v2 = ["dep:anchor-lang-v2"]

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
spl-token-2022 = { version = "1.0", features = ["no-entrypoint"] }
spl-token-metadata-interface = { version = "0.2" }
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
pyth-sdk-solana = "0.10"
# pythnet-sdk (no default features) exposes the canonical
# PriceFeedMessage struct used inside Pyth Solana Receiver's
# PriceUpdateV2 account. Using this official struct's BorshDeserialize
# swaps the prior hand-rolled fixed-offset parser for a compile-time
# typed binding: any breaking layout change on the Pyth side produces a
# build error (missing/reordered fields) or a deserialize error at
# runtime, rather than silent garbage reads. Pulled with
# no-default-features to keep the transitive closure light (~52 crates,
# no Anchor).
pythnet-sdk = { version = "2.3", default-features = false }
# pythnet-sdk uses borsh 0.10 internally; pin the same major so our
# direct use of BorshDeserialize on its types reads/writes the same
# wire format.
borsh = { version = "0.10", default-features = false }
pinocchio = "0.6"
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"
percolator = { path = "../percolator" }
serde_json = "1"
# Wave 12-D: optional Anchor v2 / Pinocchio runtime (port of upstream eefe834).
# Only pulled in when `--features anchor-v2` is set; the default build keeps
# the legacy `solana_program::entrypoint!` and never compiles this dependency.
anchor-lang-v2 = { git = "https://github.com/solana-foundation/anchor", rev = "e3cf760826fa0a60f247635ea0572e59861ec9b5", package = "anchor-lang-v2", default-features = false, features = ["alloc", "guardrails"], optional = true }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "z"

[dev-dependencies]
bincode = "1"
solana-sdk = "1.18"
solana-client = "1.18"
solana-program-runtime = "1.18"
rand = "0.8"
rand_xorshift = "0.3"
proptest = "1.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serial_test = "3"
litesvm = "0.1"
shellexpand = "3"
